Cerrar corte hexagonal para prueba Docker